增加订单、购物车、收货地址等功能。

--- a/app/static/theme/shop-checkout-complete.html
+++ b/app/static/theme/shop-checkout-complete.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-<!-- 
-Theme: JANGO - Ultimate Multipurpose HTML Theme Built With Twitter Bootstrap 3.3.6
-Version: 1.3.7
-Author: Themehats
-Site: http://www.themehats.com
-Purchase: http://themeforest.net/item/jango-responsive-multipurpose-html5-template/11987314?ref=themehats
-Contact: support@themehats.com
-Follow: http://www.twitter.com/themehats
--->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
 <html lang="en">
@@ -128,7 +119,7 @@ Follow: http://www.twitter.com/themehats
                     <!-- BEGIN: BRAND -->
                     <div class="c-navbar-wrapper clearfix">
                         <div class="c-brand c-pull-left">
-                            <a href="../templates/index.html" class="c-logo">
+                            <a href="/index" class="c-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo-inverse">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-mobile-logo"> </a>
@@ -162,7 +153,7 @@ Follow: http://www.twitter.com/themehats
                         <nav class="c-mega-menu c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold">
                             <ul class="nav navbar-nav c-theme-nav">
                                 <li class="c-active">
-                                    <a href="../templates/index.html" class="c-link dropdown-toggle">主页
+                                    <a href="/index" class="c-link dropdown-toggle">主页
                                     </a>
                                 </li>
                                 <li>
