--- a/app/static/theme/shop-home-1.html
+++ b/app/static/theme/shop-home-1.html
@@ -131,7 +131,7 @@ Follow: http://www.twitter.com/themehats
                     <!-- BEGIN: BRAND -->
                     <div class="c-navbar-wrapper clearfix">
                         <div class="c-brand c-pull-left">
-                            <a href="../templates/index.html" class="c-logo">
+                            <a href="/index" class="c-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo-inverse">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-mobile-logo"> </a>
@@ -165,7 +165,7 @@ Follow: http://www.twitter.com/themehats
                         <nav class="c-mega-menu c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold">
                             <ul class="nav navbar-nav c-theme-nav">
                                 <li class="c-active">
-                                    <a href="../templates/index.html" class="c-link dropdown-toggle">主页
+                                    <a href="/index" class="c-link dropdown-toggle">主页
                                     </a>
                                 </li>
                                 <li>
