--- a/app/static/theme/shop-product-details.html
+++ b/app/static/theme/shop-product-details.html
@@ -128,7 +128,7 @@ Follow: http://www.twitter.com/themehats
                     <!-- BEGIN: BRAND -->
                     <div class="c-navbar-wrapper clearfix">
                         <div class="c-brand c-pull-left">
-                            <a href="../templates/index.html" class="c-logo">
+                            <a href="/index" class="c-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo-inverse">
                                 <img src="assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-mobile-logo"> </a>
@@ -173,7 +173,7 @@ Follow: http://www.twitter.com/themehats
                                                         <h3>Home Samples</h3>
                                                     </li>
                                                     <li class="c-active">
-                                                        <a href="../templates/index.html">Home Version 1</a>
+                                                        <a href="/index">Home Version 1</a>
                                                     </li>
                                                     <li>
                                                         <a href="home-2.html">Home Version 2</a>
